--- a/public/jquery-ui-custom/jquery-ui.css
+++ b/public/jquery-ui-custom/jquery-ui.css
@@ -610,7 +610,7 @@ button.ui-button::-moz-focus-inner {
 .ui-widget-header {
 	border: 1px solid #e78f08;
 	background: #f6a828 url("images/ui-bg_gloss-wave_35_f6a828_500x100.png") 50% 50% repeat-x;
-	color: #ffffff;
+	color: #646464;
 	font-weight: bold;
 }
 .ui-widget-header a {
